Add second chance system to wreathed hind